[tool.poetry]
name = "fetch_case"
version = "0.1.0"
description = ""
authors = ["Paul Gowder <paul.gowder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
html2text = "^2020.1.16"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
